# ollie-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLIENT_ONBOARDING.md
examples/: __init__.py  demo_batch_payload_inspection.py  sdk_test_agent_loop.py
examples/auto_llm_agent/: __init__.py  agent.py  run.py
examples/auto_openai_agent/: __init__.py  agent.py  run.py  tools.py
examples/simulated_agent/: __init__.py  agent.py  cases.py  expectations.py  llm.py  prompts.py  registry.py  run.py  tools.py  validators.py
src/ollie/: __init__.py  builtins.py  client.py  context.py  delivery.py  errors.py  event.py  instruments.py  interaction.py  interaction_v2.py  primitives.py  session.py  tool.py  trace.py  transport.py  tree.py  workflow.py
src/ollie/signals/: __init__.py  baselines.py  catalog.py  direct.py  hits.py  instrument.py  spans.py
src/ollie/tracing/: __init__.py  adapter.py  anthropic_instrumentor.py  exporter.py  gemini_instrumentor.py  openai_instrumentor.py  (+1 more)
tests/: collector_server.py  conftest.py  test_auto_anthropic_live.py  test_auto_gemini_live.py  test_auto_openai_live.py  test_client_config.py  test_context.py  test_delivery_batch_of_one.py  test_delivery_idempotency.py  test_delivery_retry.py  test_event_buffer_count_flush.py  test_event_buffer_timer_flush.py  test_event_envelope.py  test_exporter_no_workflow.py  test_instruments_resolve.py  test_interaction_attributes.py  test_interaction_events.py  test_interaction_lifecycle.py  test_interaction_root.py  test_interaction_start_end.py  test_interaction_tree_refs.py  test_otel_adapter_unit.py  test_registry.py  test_serializer.py  test_signals_unit.py  test_span_tree.py  test_tracing_install_requires_extra.py  test_transport_compression.py  test_transport_mock.py  test_workflow_lifecycle.py  test_workflow_serializer.py  tracing_live_helpers.py
tests/e2e/: artifacts_util.py  conftest.py  test_concurrent_delivery.py  test_e2e_event_batch_delivery.py  test_http_delivery.py  test_simulated_agent_live.py
tests/fixtures/: normalized_trace.json  valid_trace.json  valid_workflow_v2.json
tests/scenarios/: __init__.py  customer_flows.py
